# ASR-Memo

./: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml  requirements.txt  transcribe_meeting.py
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
app/: __init__.py  app_session.py  bridge.py  dto.py  main.py
app/web/: app.js  index.html  styles.css
docs/plans/: cross-platform-nemo.md
native/AudioTap/: Package.swift
native/AudioTap/Sources/AudioTap/: AudioTap.swift
packaging/: Info.plist.in  MeetingAssistant.spec  build_app.sh
specs/001-meeting-asr-backend/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-meeting-asr-backend/checklists/: requirements.md
specs/001-meeting-asr-backend/contracts/: audio_capture.md  public_api.md  speaker_diarizer.md  speech_transcriber.md
specs/002-macos-app-ui/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-macos-app-ui/checklists/: requirements.md
specs/002-macos-app-ui/contracts/: file_transcription.md  js_bridge_api.md  transcript_export.md  validation_report.md
src/meeting_asr/: __init__.py  _logging.py  pipeline.py  session.py  types.py
src/meeting_asr/asr/: _features.py  nemotron_nemo.py  nemotron_onnx.py  transcriber.py
src/meeting_asr/audio/: capture.py  coreaudio_tap.py  file_capture.py  microphone.py  mixer.py  pipewire_loopback.py  screencapturekit.py  wasapi_loopback.py
src/meeting_asr/backends/: device.py  factory.py
src/meeting_asr/diarization/: _sortformer_decode.py  _streaming_state.py  diarizer.py  sortformer_coreml.py  sortformer_nemo.py
src/meeting_asr/export/: __init__.py  json_export.py  markdown.py  palette.py
src/meeting_asr/fusion/: aligner.py
src/meeting_asr/models/: readiness.py  registry.py
tests/: _fakes.py  _metrics.py  _synth.py  conftest.py
tests/contract/: test_bridge_api.py  test_diarizer.py  test_file_transcription.py  test_lifecycle.py  test_public_api.py  test_transcriber.py
tests/fixtures/audio/: multilingual.json  real_twospeaker_en.json  single_speaker_en.json  two_speaker_en.json
tests/fixtures/validation/: README.md  manifest.json
tests/integration/: test_app_session_file.py  test_app_session_live.py  test_asr_realmodel.py  test_audiotap_helper.py  test_diarization_accuracy.py  test_performance.py  test_quantization_gate.py  test_us1_single_source.py  test_us2_system_audio.py  test_us3_multilingual.py  test_us4_lifecycle.py  test_validation_run.py
tests/unit/: test_aligner.py  test_asr_language.py  test_backend_factory.py  test_device.py  test_export.py  test_file_capture.py  test_harness.py  test_loopback_capture.py  test_mixer.py  test_multisource_mixer.py  test_nemo_backends.py  test_registry.py  test_validation_metrics.py
validation/: __init__.py  __main__.py  datasets.py  metrics.py  runner.py
